stateful-todo/k8s/stateful-todo-namespace.yaml
# создание namespace
apiVersion: v1
kind: Namespace
metadata:
    name: stateful-todo
