stateful-todo/k8s/stateful-todo-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful-todo-clusterip-service
  namespace: stateful-todo
spec:
  type: ClusterIP
  selector:
    app: stateful-todo
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
